Fix jumping in execs scroll animation by removing margin from subclubs section.

--- a/src/styles/homepage-sections/subclubs.css
+++ b/src/styles/homepage-sections/subclubs.css
@@ -1,5 +1,4 @@
 .subclubs-slider {
-  margin-bottom: 4em;
   position: relative;
   z-index: 2;
 }
